# nodal

./: CHANGELOG.md  Cargo.toml  README.md  compose.yaml
.github/workflows/: ci.yml
examples/weather-station/: Cargo.toml
nodal/: Cargo.toml
nodal-macros/: Cargo.toml
nodal-macros/src/: lib.rs
nodal/examples/: weather_station.rs
nodal/src/: endpoint.rs  handler.rs  header.rs  lib.rs  stream.rs
nodal/tests/: test_integration.rs
rfd/: RFD 1 Requests for Discussion.md  RFD 2 Principles.md
rofr/: Cargo.toml
rofr-macros/: Cargo.toml
rofr-macros/src/: lib.rs
rofr/examples/: weather_station.rs
rofr/src/: endpoint.rs  header.rs  lib.rs
rofr/tests/: test_integration.rs
