[package]
name = "nodal-macros"
description = "Macros for Nodal"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nodal = { version = "^0.1.0", path = "../nodal" }
serde_json = "1.0"
schemars = "1.2"
