[package]
name = "nodal"
description = "Framework for building robotics APIs that use NATS messaging"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
nodal-macros = { version = "^0.1.0", path = "../nodal-macros" }
async-nats = { version = "0.47.0", default-features = false, features = ["jetstream", "server_2_10", "server_2_11", "server_2_12", "service"] }
async-trait = "0.1.89"
bytes = "1"
futures = "0.3"
tokio = { version = "1.51", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
schemars = "1.2"
ulid = "1.2"

[dev-dependencies]
tokio = { version = "1.51", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
